# LightningView

./: .gitignore  Cargo.toml  Logo_big.xcf  README.md  build.rs  com.lightningview.yml  flake.nix  io.github.dividebysandwich.lightningview.yml  lightningview.desktop  lightningview.xcf
.github/workflows/: release.yml  update-scoop.yml  update-winget.yml
packaging/chocolatey/: lightningview.nuspec
packaging/chocolatey/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
packaging/scoop/: lightningview.json
shaders/: compile.sh  quad.frag  quad.frag.spv  quad.vert  quad.vert.spv  video.frag  video.frag.spv
src/: app.rs  audio.rs  cache.rs  config.rs  decode.rs  formats.rs  geom.rs  gpu.rs  main.rs  notwindows.rs  subtitles.rs  thumbnail.rs  types.rs  video.rs  video_state.rs  windows.rs  workers.rs
wix/: main.wxs
