[package]
name = "lightningview"
description = "A fast image viewer that supports a wide range of image formats."
version = "1.8.0"
edition = "2024"
build = "build.rs"
authors = ["The LightningView developers"]
repository = "https://github.com/dividebysandwich/LightningView"

[dependencies]
const_format = "0.2"
eframe = "0.32"
egui = "0.32"
image = "0.25"
rand = "0.9"
log = "0.4"
env_logger = "0.11"
arboard = { version = "3.6", features = ["wayland-data-control"] }
rustronomy-fits = "0.2"
ndarray = "0.15.6"
rawler = { git = "https://github.com/dividebysandwich/dnglab" }
imagepipe = { git = "https://github.com/dividebysandwich/imagepipe" }
rayon = "1.11.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Win32_UI_Shell"]}
winreg = "0.55"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
windows = "0.62"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1

[package.metadata.bundle]
name = "LightningView"
identifier = "com.lightningview"
version = "1.8.0"
icon = ["logo_256.png"]
copyright = "2024, the LightningView developers"
category = "Graphics and Design"
short_description = "A fast image viewer"
long_description = "LightningView is a fast image viewer that supports a wide range of image formats. It is designed to be fast and responsive, with a minimal interface that gets out of your way. LightningView is perfect for quickly viewing and sorting through large collections of images."
linux_exec_args = "%f"
linux_mime_types = [
    "image/jpeg",
	"image/jpg",
	"image/pjpeg",
	"image/png",
	"image/apng",
	"image/gif",
	"image/webp",
	"image/tiff",
	"image/bmp",
	"image/avif",
	"image/svg+xml",
	"image/svg",
	"image/x-png",
	"image/x-tga",
	"image/x-targa",
	"image/x-bmp",
	"image/vnd.microsoft.icon",
	"image/vnd.radiance",
	"image/x‑portable‑bitmap",
	"image/x‑portable‑graymap",
	"image/x‑portable‑pixmap",
	"image/x‑portable‑anymap",
    "image/x-sony-arw",
    "image/x-canon-cr2",
    "image/x-canon-crw",
    "image/x-kodak-dcr",
    "image/x-adobe-dng",
    "image/x-epson-erf",
    "image/x-kodak-k25",
    "image/x-kodak-kdc",
    "image/x-minolta-mrw",
    "image/x-nikon-nef",
    "image/x-olympus-orf",
    "image/x-pentax-pef",
    "image/x-fuji-raf",
    "image/x-panasonic-raw",
    "image/x-sony-sr2",
    "image/x-sony-srf",
    "image/x-sigma-x3f",
    "image/x-samsung-srw",
    "image/x-panasonic-rw2",
	"application/fits"
]
