[package]
name = "lightningview"
description = "A fast image viewer and video player that supports a wide range of formats."
version = "2.7.0"
license = "GPLv2"
edition = "2024"
build = "build.rs"
authors = ["The LightningView developers"]
repository = "https://github.com/dividebysandwich/LightningView"

[dependencies]
const_format = "0.2.36"
image = { version = "0.25.10" }
jpeg-decoder = "0.3.2"
libjpeg-turbo-rs = "0.6.2"
bytemuck = "1.25"
fast_image_resize = "5"
qoi = "0.4"
rand = "0.10.1"
log = "0.4.32"
env_logger = "0.11.10"
arboard = { version = "3.2.1", features = ["wayland-data-control"] }
rustronomy-fits = "0.2"
ndarray = "0.15"
rawler = { git = "https://patched@github.com/dividebysandwich/dnglab.git", rev="06dc3dab" }
imagepipe = { git = "https://github.com/dividebysandwich/imagepipe", rev="cc9df677"}
rayon = "1.12.0"
jxl-oxide = { version = "0.12.6", features = ["image"] }
sysinfo = { version = "0.39.3", default-features = false, features = ["system"] }
anyhow = "1"
ffmpeg-next = { version = "8.1", default-features = false, features = ["codec", "format", "software-resampling", "software-scaling"] }
rodio = { version = "0.22", default-features = false, features = ["playback", "symphonia-all"] }
serde = { version = "1", features = ["derive"] }
toml = "0.9"
dirs = "6"
# Vendored SDL3, statically linked into the binary so there's no SDL3.dll /
# libSDL3.so to ship. (SDL3 still dlopens the platform's own X11/Wayland/audio
# system libs at runtime; those are always present.)
sdl3 = { version = "0.18.4", features = ["build-from-source-static"] }
fontdue = "0.9.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Win32_UI_Shell"]}
winreg = "0.56.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
windows = "0.62"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1

[package.metadata.bundle]
name = "LightningView"
identifier = "com.lightningview"
version = "2.7.0"
license = "GPLv2"
icon = ["logo_256.png"]
copyright = "2025-2026, the LightningView developers"
category = "Graphics and Design"
short_description = "A fast image viewer and video player"
long_description = "LightningView is a fast image viewer and video player that supports a wide range of formats. It is designed to be fast and responsive, with a minimal interface that gets out of your way. LightningView is perfect for quickly viewing and sorting through large collections of images and videos."
linux_exec_args = "%f"
linux_mime_types = [
    "image/jpeg",
	"image/jpg",
	"image/jxl",
	"image/pjpeg",
	"image/png",
	"image/apng",
	"image/gif",
	"image/webp",
	"image/tiff",
	"image/bmp",
	"image/avif",
	"image/svg+xml",
	"image/svg",
	"image/x-png",
	"image/x-tga",
	"image/x-targa",
	"image/x-bmp",
	"image/vnd.microsoft.icon",
	"image/vnd.radiance",
	"image/x‑portable‑bitmap",
	"image/x‑portable‑graymap",
	"image/x‑portable‑pixmap",
	"image/x‑portable‑anymap",
    "image/x-sony-arw",
    "image/x-canon-cr2",
    "image/x-canon-crw",
    "image/x-kodak-dcr",
    "image/x-adobe-dng",
    "image/x-epson-erf",
    "image/x-kodak-k25",
    "image/x-kodak-kdc",
    "image/x-minolta-mrw",
    "image/x-nikon-nef",
    "image/x-olympus-orf",
    "image/x-olympus-ori",
    "image/x-pentax-pef",
    "image/x-fuji-raf",
    "image/x-panasonic-raw",
    "image/x-sony-sr2",
    "image/x-sony-srf",
    "image/x-sigma-x3f",
    "image/x-samsung-srw",
    "image/x-panasonic-rw2",
	"application/fits",
    "video/mp4",
    "video/x-matroska",
    "video/webm",
    "video/x-msvideo",
    "video/quicktime",
    "video/x-m4v",
    "video/mpeg",
    "video/x-ms-wmv",
    "video/x-flv",
    "video/mp2t"
]

[patch."https://github.com/dividebysandwich/dnglab"]
rawler = { git = "https://patched@github.com/dividebysandwich/dnglab.git", rev = "06dc3dab" }
